2006-04-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (getaddrinfo): Fix typo which caused
	bugs not to be reported.

	* nscd/nscd.h (struct database_dyn): Add propagate field.
	* nscd/nscd_conf.c (nscd_parse_file): Parse auto-propagate lines.
	* nscd/nscd.conf: Add auto-propagate lines.
	* nscd/connections.c (dbs): Initialize .propagate fields.
	* nscd/grpcache.c (cache_addgr): Do not add ID entry for name lookups
	and vice versa if propagation is disabled for the database.
	* nscd/pwdcache.c (cache_addpw): Likewise.

2006-04-26  James Antill  <james.antill@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* config.make.in: Add have-libcap.
	* configure.in: Check for libcap.
	* nscd/Makefile (selinux-LIBS): Add -lcap if possible.
	* nscd/connections.c (finish_drop_privileges): When libcap is available
	call preserve_capabilities and install_real_capabilities.
	* nscd/selinux.c: Define preserve_capabilities and
	install_real_capabilities.
	* nscd/selinux.h: Declare preserve_capabilities and
	install_real_capabilities.

2006-04-26  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-4217.def: Update.

2006-04-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2420]
	* stdlib/strfmon_l.c (__vstrfmon_l): Fix handling of ! modifier.
	* localedata/Makefile: Add rules to build and run tst-strfmon1.
	* localedata/tst-strfmon1.c: New file.

	[BZ #2571]
	* nscd/nscd_helper.c (__nscd_get_map_ref): Make mapptr argument a
	volatile pointer so that the mapptr->mapped value is re-read after
	the lock is retrieved.
	* nscd/nscd-client.h: Update __nscd_get_map_ref prototype.

	* include/features.h [_GNU_SOURCE] (_POSIX_C_SOURCE): Define to
	200112L.

	* resolv/res_hconf.c: Minor surgery to 'cmd' and the referenced
	functions to avoid relocations.

	[BZ #2389]
	* resolv/res_hconf.c: Remove 'order' parsing.  Just ignore the line.
	* resolv/res_hconf.h: Remove Name_Service definition.
	(struct hconf): Replace service related fields with placeholders.
